[metadata]
name = httpretty
version = 0.7.1

summary = HTTP client mock for Python
description-file =
    README.md
author = Gabriel Falcao
author-email = gabriel@nacaolivre.org
home-page = http://github.com/gabrielfalcao/httpretty
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Testing

[files]
packages =
    httpretty

[nosetests]
verbosity=2
with-coverage=1
cover-erase=1
cover-package=httpretty
cover-inclusive=1
